[package]
name = "bevy_steam_p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0" }
bevy-steamworks = { git = "https://github.com/Sigma-dev/bevy_steamworks", version = "0.11", features = ["serde"] }
steamworks = { git = "https://github.com/Sigma-dev/steamworks-rs.git" }
flume = "0.11.0"
bevy_egui = "0.29.0"
serde = "1.0.209"
rmp-serde = "1.3.0"