[package]
name = "bevy_steam_p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0", features = ["serialize"] }
bevy-steamworks = { git = "https://github.com/HouraiTeahouse/bevy_steamworks.git", features = ["serde"] }
steamworks = "0.12.2"
flume = "0.11.0"
bevy_egui = "0.29.0"
serde = "1.0.209"
rmp-serde = "1.3.0"